# ToyBox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmaker.bat  generate_projects.bat  imgui.ini  linux_config.sh  premake5.lua  project_config.py  windows_config.bat
assets/scenes/: flying_high.scene  test.scene
assets/shaders/: frag.spv  shader.frag
assets/shaders/blinn-phong/: blinn-phong_vertex.shader
assets/shaders/default/: default_geometry.shader  default_vertex.shader  instanced_vertex.shader
assets/shaders/flat_colour/: flat_colour_fragment.shader
assets/shaders/mirror/: mirror_fragment.shader
assets/shaders/pbr/: pbr_standard_vertex.shader
assets/shaders/shadow_map/: shadow_map_fragment.shader
assets/shaders/skybox/: compile.sh  frag.spv  skybox.frag  skybox.vert  skybox_vertex.shader  vert.spv
engine/: Application.cpp  Application.h  CMakeLists.txt  CommonTypes.hpp  Engine.cpp  Engine.hpp  Entity.hpp  GLError.cpp  GLError.h  GLTFLoader.cpp  ImGuiHelper.cpp  ImGuiHelper.h  Input.cpp  Input.hpp  Inspector.cpp  Log.cpp  Log.h  Log.hpp  Memory.cpp  Memory.hpp  ModelLoader.cpp  Types.hpp  ViewPort.cpp  Window.cpp  Window.h  main.cpp  pch.h
engine/components/: All.h  CMakeLists.txt  Component.h  Fwd.h  Light.cpp  MaterialComponent.cpp  MaterialComponent.h  Mesh.hpp  MeshComponent.cpp  MeshComponent.h  Transform.cpp  Transform.h
engine/editor/: CMakeLists.txt  Diagnostics.cpp  Diagnostics.hpp  Editor.cpp  Editor.hpp  Inspector.cpp  Inspector.h  Inspector.hpp  MenuBar.cpp  MenuBar.hpp
engine/events/: CMakeLists.txt  Event.h  EventList.cpp
engine/profiler/: CMakeLists.txt  Timer.cpp  Timer.h  Timer.hpp
engine/renderer/: Buffer.cpp  Buffer.h  CMakeLists.txt  FrameBuffer.cpp  Fwd.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Renderer.cpp  Shader.cpp  StaticRenderer.h  Texture.cpp  VertexArray.cpp
engine/rendering/: CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.hpp  GpuResources.hpp  RenderTypes.cpp  RenderTypes.hpp  Renderer.cpp  Renderer.hpp  Vertex.hpp
engine/scene/: CMakeLists.txt  Camera.cpp  Camera.hpp  LightManager.cpp  LightManager.h  Primitives.cpp  Primitives.hpp  Scene.cpp  Scene.hpp  SceneNode.cpp  SceneNode.hpp  SceneSerializer.cpp  SceneSerializer.hpp  Skybox.cpp  Skybox.h
engine/util/: CMakeLists.txt  DeviceHelper.cpp  DeviceHelper.hpp  FileOperations.cpp  FileOperations.hpp  ImGuiHelper.cpp  ImGuiHelper.hpp  ModelLoader.cpp  ModelLoader.hpp
gl_sandbox/: imgui.ini
gl_sandbox/res/shaders/: basic.shader
gl_sandbox/resources/scenes/: flying_high.scene  spooky.scene
gl_sandbox/src/: Application.cpp  Application.h  Camera.cpp  Camera.h  Core.h  GLTFLoader.cpp  GLTFLoader.h  Input.cpp  Input.h  Log.h  ParseFile.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  SceneSerializer.cpp  SceneSerializer.h  Shader.cpp  Shader.h  Window.cpp  Window.h  main.cpp  pch.h
gl_sandbox/src/components/: Component.h  IComponent.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Transform.cpp  Transform.h
gl_sandbox/src/entities/: Entity.cpp  Entity.h  Mesh.cpp  Model.cpp  Model.h  ParseFile.cpp  Primitives.cpp  Primitives.h  Skybox.cpp  Skybox.h
gl_sandbox/src/events/: EventList.cpp
gl_sandbox/src/geometry/: Geometry.cpp  Geometry.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Skybox.cpp  Skybox.h
gl_sandbox/src/lights/: PointLight.cpp  PointLight.h
gl_sandbox/src/math/: Matrix.h  Quaternion.h  Vector.h
gl_sandbox/src/renderer/: Buffer.cpp  Buffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
resources/models/asteroid/: scene.gltf
resources/scenes/: chamber_of_reflection.scene  cute_bunny.scene  flying_high.scene  shadow_test.scene  something.scene  spooky.scene  test.scene
resources/shaders/blinn-phong/: blinn-phong_fragment.shader  blinn-phong_vertex.shader
resources/shaders/default/: default_fragment.shader  default_vertex.shader
resources/shaders/flat_colour/: flat_colour_fragment.shader  flat_colour_vertex.shader
resources/shaders/mirror/: mirror_fragment.shader  mirror_vertex.shader
resources/shaders/pbr/: pbr_standard_fragment.shader  pbr_standard_vertex.shader
resources/shaders/shadow_map/: instanced_sm_vertex.shader  shadow_cubemap_fragment.shader  shadow_cubemap_geometry.shader  shadow_cubemap_vertex.shader  shadow_map_vertex.shader
resources/shaders/skybox/: skybox_fragment.shader
src/: Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  Entity.h  GLError.cpp  GLError.h  GLTFLoader.cpp  GLTFLoader.h  ImGuiHelper.cpp  ImGuiHelper.h  Input.cpp  Inspector.cpp  Inspector.h  Log.cpp  Log.h  ModelLoader.cpp  ModelLoader.h  ViewPort.cpp  ViewPort.h  Window.cpp  Window.h  main.cpp  pch.h
src/components/: All.h  CMakeLists.txt  Component.h  Fwd.h  Light.cpp  Light.h  Material.cpp  Material.h  MaterialComponent.cpp  MaterialComponent.h  Mesh.cpp  Mesh.h  MeshComponent.h  MeshObject.cpp  MeshObject.h  MeshView.cpp  MeshView.h  Transform.cpp  Transform.h
src/entities/: CMakeLists.txt  Entity.h  Primitives.cpp  Primitives.h  Skybox.cpp  Skybox.h
src/events/: CMakeLists.txt  Event.h  EventList.h
src/profiler/: CMakeLists.txt  Timer.cpp
src/renderer/: Buffer.cpp  Buffer.h  CMakeLists.txt  FrameBuffer.cpp  FrameBuffer.h  Fwd.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/scene/: CMakeLists.txt  LightManager.cpp  LightManager.h  Primitives.h  Scene.cpp  Scene.h  SceneNode.cpp  SceneNode.h  SceneSerializer.cpp  SceneSerializer.h  Skybox.cpp
toy_box/: imgui.ini
toy_box/resources/scenes/: flying_high.scene  something.scene  spooky.scene
toy_box/src/: Application.cpp  Camera.cpp  Camera.h  FileOperations.cpp  FileOperations.h  GLTFLoader.h  ImGuiHelper.h  Input.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h  Window.cpp  main.cpp  pch.h
toy_box/src/components/: Component.h  Fwd.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Transform.cpp  Transform.h
(+37 files in other folders)
